--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <button type="button" class=" key p-2  ">Contact Us</button>
         </div>
         <div class="col-md-6 mb-md-0  p-md-4">
-            <img src="./assest/image/business-people-discussing-business-idea.png" class="w-100 img-fluid" alt="business-people">
+            <img src="./assets/image/business-people-discussing-business-idea.png" class="w-100 img-fluid" alt="business-people">
         </div>
     </div>
 </div>
@@ -56,16 +56,16 @@
       <h2 class="mb-5 text-lowercase fs-5 fw-light text-body-tertiary">Trusted by 4,000+ companies</h2>
   <div class="row container d-flex align-items-center justify-content-center bg-light text-dark trusted-logo">
     <div class="col-3">
-      <img src="./assest/image/Vector(1).png" alt="spotify" class=" photo img-fluid logo-img">
+      <img src="./assets/image/Vector(1).png" alt="spotify" class=" photo img-fluid logo-img">
     </div>
     <div class="col-3">
-      <img src="./assest/image/Company logo.png" alt="slack" class="img-fluid logo-img">
+      <img src="./assets/image/Company logo.png" alt="slack" class="img-fluid logo-img">
     </div>
     <div class="col-3">
-      <img src="./assest/image/logo.png" alt="dropbox" class=" img-fluid logo-img">
+      <img src="./assets/image/logo.png" alt="dropbox" class=" img-fluid logo-img">
     </div>
     <div class="col-3">
-      <img src="./assest/image/Company.png" alt="zoom" class=" img-fluid logo-img">
+      <img src="./assets/image/Company.png" alt="zoom" class=" img-fluid logo-img">
     </div>
   </div>
 </div>
@@ -74,12 +74,12 @@
   <section class=" container">
     <div class="row container  bg-white text-dark mt-5 d-flex align-items-center mx-md-5">
         <div class="col-md-6 mb-md-0  p-md-4 order-2 order-md-1 ">
-            <img src="./assest/image/designer-team-working-on-creative-design.png" class="w-100 img-fluid bg-white" alt="couple">
+            <img src="./assets/image/designer-team-working-on-creative-design.png" class="w-100 img-fluid bg-white" alt="couple">
         </div>
         <div class="col-md-6  p-4 ps-md-5 order-1 order-md-2 d-flex flex-column justifiy-content-between align-items-center mt-5 text-cinter text-md-start">
             <h2 class="text-black fw-bold lh-1 fs-1 text-capitalize text-wrap text-md-start text-center w-75 ">Branding & Design system</h2>
             <p class="text-lowercase 1h-sm fs-6 fw-light  text-md-start text-center w-75">Commonly used in the graphic, print & publishing industris for previewing visual layout and mockups</p>
-            <img src="./assest/image/Arrow 1.svg" alt="arrow" class=" arrow-icon mt-3 bg-white">
+            <img src="./assets/image/Arrow 1.svg" alt="arrow" class=" arrow-icon mt-3 bg-white">
         </div>
     </div>
   </section>
@@ -89,10 +89,10 @@
         <div class="col-md-6  p-4 ps-md-5 order-1 order-md-2 d-flex flex-column justifiy-content-between align-items-center mt-5 text-cinter text-md-start">
             <h2 class="text-black fw-bold lh-1 fs-1 text-capitalize text-wrap text-md-start text-center w-75 ">Custome & Plugin Development</h2>
             <p class="text-lowercase 1h-sm fs-6 fw-light  text-md-start text-center w-75">Commonly used in the graphic, print & publishing industris for previewing visual layout and mockups</p>
-            <img src="./assest/image/Arrow 1.svg" alt="arrow" class=" arrow-icon mt-3 bg-white">
+            <img src="./assets/image/Arrow 1.svg" alt="arrow" class=" arrow-icon mt-3 bg-white">
         </div>
         <div class="col-md-6 mb-md-0  p-md-4 order-1 order-md-2">
-            <img src="./assest/image/businessman-analyzing-data.png" class="w-100 img-fluid bg-white" alt="businessman">
+            <img src="./assets/image/businessman-analyzing-data.png" class="w-100 img-fluid bg-white" alt="businessman">
         </div>
     </div>
   </section>
@@ -105,7 +105,7 @@
       <div class="carousel-inner d-md-none my-5">
       <div class="carousel-item active" data-bs-interval="5000">
     <div class="card bg-light mx-auto" style="width: 18rem;">
-  <img src="./assest/image/3237f5f8-350d-4b56-a25c-3ebb1df9f4f1.jpeg" class="card-img-top mx-auto w-50" alt="man2">
+  <img src="./assets/image/3237f5f8-350d-4b56-a25c-3ebb1df9f4f1.jpeg" class="card-img-top mx-auto w-50" alt="man2">
   <div class="card-body">
     <h5 class="card-title text-center">Another man</h5>
     <p class="card-text text-center"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ullamcorper scelerisque mi, in malesuada felis malesuada vel.</p>
@@ -114,7 +114,7 @@
       </div>
     <div class="carousel-item active" data-bs-interval="5000">
     <div class="card bg-light mx-auto" style="width: 18rem;">
-  <img src="./assest/image/western-man-4975942-4159828 1.png" class="card-img-top mx-auto w-50" alt="man">
+  <img src="./assets/image/western-man-4975942-4159828 1.png " class="card-img-top mx-auto w-50" alt="man">
   <div class="card-body">
     <h5 class="card-title text-center">Andrew Rathore</h5>
     <p class="card-text text-center"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ullamcorper scelerisque mi, in malesuada felis malesuada vel.</p>
@@ -123,7 +123,7 @@
       </div>
     <div class="carousel-item" data-bs-interval="5000">
         <div class="card bg-light mx-auto" style="width: 18rem;">
-  <img src="./assest/image/western-wman-4975942-4159828 2.png" class="card-img-top mx-auto w-50" alt="woman">
+  <img src="./assets/image/western-wman-4975942-4159828 2.png" class="card-img-top mx-auto w-50" alt="woman">
   <div class="card-body">
     <h5 class="card-title text-center">Vera Duncan</h5>
     <p class="card-text text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ullamcorper scelerisque mi, in malesuada felis malesuada vel.</p>
@@ -132,7 +132,7 @@
     </div>
     <div class="carousel-item" data-bs-interval="5000">
       <div class="card bg-light mx-auto" style="width: 18rem;">
-  <img src="./assest/image/western-mark-4975942-4159828 3.png" class="card-img-top mx-auto w-50" alt="mark">
+  <img src="./assets/image/western-mark-4975942-4159828 3.png" class="card-img-top mx-auto w-50" alt="mark">
   <div class="card-body">
     <h5 class="card-title text-center">Mark Smith</h5>
     <p class="card-text text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ullamcorper scelerisque mi, in malesuada felis malesuada vel.</p>
@@ -141,7 +141,7 @@
   </div>
    <div class="carousel-item" data-bs-interval="5000">
         <div class="card bg-light mx-auto" style="width: 18rem;">
-  <img src="./assest/image/28e8eca3-a490-42e2-b004-5d4c4eee5581.jpeg" class="card-img-top mx-auto w-50" alt="woman2">
+  <img src="./assets/image/28e8eca3-a490-42e2-b004-5d4c4eee5581.jpeg" class="card-img-top mx-auto w-50" alt="woman2">
   <div class="card-body">
     <h5 class="card-title text-center">Another woman</h5>
     <p class="card-text text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ullamcorper scelerisque mi, in malesuada felis malesuada vel.</p>
@@ -160,7 +160,7 @@
 <div class="row container row-cols-1 row-cols-md-3 mx-5 d-none d-md-flex mt-5">
       <div class="col">
         <div class="card bg-light container text-center">
-          <img src="./assest/image/western-man-4975942-4159828 1.png" class="card-img-top mx-auto w-50" alt="man">
+          <img src="./assets/image/western-man-4975942-4159828 1.png" class="card-img-top mx-auto w-50" alt="man">
           <div class="card-body">
             <h5 class="card-title">Andrew Rathore</h5>
             <p class="card-text">
@@ -171,7 +171,7 @@
       </div>
       <div class="col">
         <div class="card bg-light container text-center">
-          <img src="./assest/image/western-wman-4975942-4159828 2.png" class="card-img-top mx-auto w-50" alt="woman">
+          <img src="./assets/image/western-wman-4975942-4159828 2.png" class="card-img-top mx-auto w-50" alt="woman">
           <div class="card-body">
             <h5 class="card-title">Vera Duncan</h5>
             <p class="card-text">
@@ -182,7 +182,7 @@
       </div>
       <div class="col">
         <div class="card bg-light container text-center">
-<img src="./assest/image/western-mark-4975942-4159828 3.png" class="card-img-top mx-auto w-50" alt="mark">
+<img src="./assets/image/western-mark-4975942-4159828 3.png" class="card-img-top mx-auto w-50" alt="mark">
           <div class="card-body">
             <h5 class="card-title">Mark Smith</h5>
             <p class="card-text">
@@ -199,7 +199,7 @@
     <div class="container  bg-light">
       <div class="row container mx-md-5  my-5">
         <div class=" col-md-6 mb-md-0  p-md-4">
-          <img src="./assest/image/customer-support.png" class="w-100  img-fluid d-none d-md-block " alt="business-people">
+          <img src="./assets/image/customer-support.png" class="w-100  img-fluid d-none d-md-block " alt="business-people">
         </div>
         <div class="col-md-6 col-12  p-5 ps-md-5 d-flex d-lg-block flex-column justifiy-content-between align-items-center mt-5">
             <h2 class="text-black fw-bold lh-1 fs-1 text-capitalize text-wrap text-md-start text-center w-75 ">Be a part of the next big thing</h2>
