--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <!--nav-->
- <nav class="navbar navbar-expand-lg  bg-white  mt-5">
+ <nav class="navbar navbar-expand-lg  bg-light  ">
   <div class="container">
     <a class="navbar-brand fw-bold" href="#">Digital Agency</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
