--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <!--nav-->
- <nav class="navbar navbar-expand-lg  bg-light  ">
+ <nav class="navbar navbar-expand-lg  bg-light">
   <div class="container">
     <a class="navbar-brand fw-bold" href="#">Digital Agency</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -149,14 +149,8 @@
 </div>
     </div>
   </div>
- <div class="carousel-indicators mt-5 ">
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active rounded-circle d-md-none" ></button>
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" class="rounded-circle"  ></button>
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"  class="rounded-circle"    ></button>
-     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" class="rounded-circle"  ></button>
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4"  class="rounded-circle d-md-none"    ></button>
-  </div>
-</div></div>
+ 
+
 <div class="row container row-cols-1 row-cols-md-3 mx-5 d-none d-md-flex mt-5">
       <div class="col">
         <div class="card bg-light container text-center">
@@ -191,6 +185,17 @@
           </div>
         </div>
       </div>
+</div>
+      <div class="carousel-indicators mt-5 ">
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class=" rounded-circle d-md-none" ></button>
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" class=" active rounded-circle"  ></button>
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"  class="rounded-circle"    ></button>
+     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" class="rounded-circle"  ></button>
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4"  class="rounded-circle d-md-none"    ></button>
+  </div>
+  </div>
+</div>
+</div>
     </div>
   </div>
   </section>
