--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <!--nav-->
- <nav class="navbar navbar-expand-lg  bg-light">
+ <nav class="navbar navbar-expand-lg  bg-white">
   <div class="container">
     <a class="navbar-brand fw-bold" href="#">Digital Agency</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -83,6 +83,9 @@
         </div>
     </div>
   </section>
+  <div class="conti">
+    <div class="right"></div>
+</div>
   <!--custome-->
   <section class="container">
     <div class="row container  bg-white text-dark mt-5 d-flex align-items-center">
