--- a/index.html
+++ b/index.html
@@ -101,11 +101,11 @@
   </section>
   <!--Read What Other have to Say-->
 <section class="container" >
-    <div class="container text-center my-5 mx-3">
+    <div class="container text-center my-5 ">
       <h6 class=" fs-6" >TESTIMONIALS</h6>
       <h2 class="text-black fw-bold lh-1 fs-1 text-capitalize text-wrap mb-3 mx-auto  w-25 ">Read What Other have to Say</h2>
       <div id="carouselExampleIndicators" class="carousel mt-5 carousel-dark Slide me-5" data-bs-ride="carousel">
-      <div class="carousel-inner d-md-none my-5">
+      <div class="carousel-inner container d-md-none mx-5 my-5">
       <div class="carousel-item active" data-bs-interval="5000">
     <div class="card bg-light mx-auto" style="width: 18rem;">
   <img src="./assets/image/3237f5f8-350d-4b56-a25c-3ebb1df9f4f1.jpeg" class="card-img-top mx-auto w-50" alt="man2">
