--- a/index.html
+++ b/index.html
@@ -83,11 +83,12 @@
         </div>
     </div>
   </section>
-  <div class="conti">
+  
+  <!--custome-->
+  <section class="container position-relative">
+    <div class="conti">
     <div class="right"></div>
 </div>
-  <!--custome-->
-  <section class="container">
     <div class="row container  bg-white text-dark mt-5 d-flex align-items-center">
         <div class="col-md-6  p-4 ps-md-5 order-1 order-md-2 d-flex flex-column justifiy-content-between align-items-center mt-5 text-cinter text-md-start">
             <h2 class="text-black fw-bold lh-1 fs-1 text-capitalize text-wrap text-md-start text-center w-75 ">Custome & Plugin Development</h2>
